--- a/css/tyylitiedosto.css
+++ b/css/tyylitiedosto.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(media/background1.jpg);
+    background-image: url(https://github.com/marikasal/marikasal.github.io/blob/main/media/background1.jpg)
     background-color: rgb(44, 43, 43);
     background-repeat: no-repeat;
     background-size: auto;
